--- a/templates/mainsite/quiz_2.html
+++ b/templates/mainsite/quiz_2.html
@@ -152,7 +152,7 @@
       <section class="phrase-section">
         <h1 class="text-center mb-4">Say the Following Phrase</h1>
         <div class="phrase">
-            <span><b>Eu Sou Um Menino</b> <button class="sound-button" id="speakBtn">🔊</button></span>
+            <span><b title="I am a boy">Eu Sou Um Menino</b> <button class="sound-button" id="speakBtn">🔊</button></span>
         </div>
         <div class="recording">
             <button class="btn btn-primary" id="recordBtn">Click To Speak</button>
